--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Recipes" asp-action="Index">Recipes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Recipes/Create">Create Cocktail</a>
+                        </li>
 	                    <li class="nav-item">
 		                    <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Ready To Build</a>
 	                    </li>
